// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component  should match the snapshot 1`] = `
<div
  className="FieldGroup-sc-18uoi37-0 Input__InputFieldGroup-sc-16zet9e-3 gKcXhp"
>
  <input
    className="Input__InputTag-sc-16zet9e-1 inKlOh"
    defaultValue="foo"
    id=""
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
  
  
</div>
`;

exports[`Input component  with a label should match the snapshot 1`] = `
<div
  className="FieldGroup-sc-18uoi37-0 Input__InputFieldGroup-sc-16zet9e-3 gKcXhp"
>
  <input
    className="Input__InputTag-sc-16zet9e-1 inKlOh"
    defaultValue="foo"
    id="input-with-label"
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
  <label
    className="Label-sc-1ny5bqy-0 Input__InputLabel-sc-16zet9e-0 kHrprc"
    htmlFor="input-with-label"
  >
    Text label
  </label>
  
</div>
`;

exports[`Input component  with an error message should match the snapshot 1`] = `
<div
  className="FieldGroup-sc-18uoi37-0 Input__InputFieldGroup-sc-16zet9e-3 gKcXhp"
>
  <input
    className="Input__InputTag-sc-16zet9e-1 inKlOh"
    defaultValue="foo"
    id=""
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
  
  <div
    className="ErrorMessage-sc-19jcdrm-0 Input__InputErrorMessage-sc-16zet9e-4 CRooO"
  >
    Error message
  </div>
</div>
`;
